2018-02-22
==========
    FirmwareUpgrader-0.9.3.21
    - New standalone tool to upgrade Slowflyer/Gyro receivers

2018-02-20
==========
    HoTT-TTS-0.9.3.17
    - New TTS providers (Amazon Polly and Windows 10)

2018-01-21
==========
    VDFEditor-0.9.3.187
    - Improved audio quality for TTS

    HoTT-TTS-0.9.3.9
    - New standalone TTS program with quality select and WAVE output

2018-01-16
==========
    VDFEditor-0.9.3.181
    MdlViewer-0.9.3.205
    - Bug in serial port download fixed

2018-01-08
==========
    VDFEditor-0.9.3.165
    - New Czech voice file
    - Fixed drag&drop between two VDFEditor windows
    - Fixed restore menu to display MikroKopter voice files again
    - Fixed delete function to prevent deletion from system VDFs
    - Added test button to TTS dialog
    - Remember last text from TTS dialog
    - Added support for the mz-18PRO transmitter

    MdlViewer-0.9.3.197
    - Complete re-write using Kotlin programming language
    - fixed bug with empty model memories
    - fixed channel numbers in dual mixer
    - Removed Swing version

2017-12-07
==========
    VDFEditor-0.9.3.147
    - updated Italian voice files
    - added speed and volume controls to Text2Speech dialog

2017-12-03
==========
	VDFEditor-0.9.3.146
	- complete re-write using Kotlin programming language
	- automatically launch VDFEditor by double click on .vdf File
	- new icons

	MdlViewer-0.9.3.186
	- sort switches by name
	- automatically launch MdlViewer by double click on .mdl File
	- new icons

2017-11-21
==========
	VDFEditor-0.9.3.135
	- fixed error in report for empty announcements 
	
2017-11-18
==========
	VDFEditor-0.9.3.125
	- added offline mode for inclusion into Firmware Upgrade Studio
	- re-enabled automatic update check on startup for online version

2017-11-17
==========
	VDFEditor-0.9.2.117
	- disabled automatic update check on startup
	
2017-10-22
==========
	VDFEditor-0.9.2.115
	- new restore voice file for German, Spanish and Italian

2017-10-20